enable user-scalable to add media query

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<!-- Use to enable the @media query of CSS -->
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=yes">
 	<!-- <head>
 		<style>
 			@media only screen and (max-width: 600px) {
